# School

./: README.md
Semester1/HTML/Assignment3_CSSTutorial/: lht_columns.css  lht_sept.html  lht_tables.css
Semester1/HTML/FinalProject_Portfolio/: Exercise 3 - CPretty.docx  contact.html  goals.html  index.html  portfolio_base.css  portfolio_layout.css  resume.html  skills.html
Semester1/JavaScript/Assignment1_TimeCounter/: ._scripts.js  index.html  scripts.js
Semester1/JavaScript/Assignment2_Calculation/: README.md  p1-landscape.js  p2-mobileData.js  p3-autoInsurance.js
Semester1/JavaScript/Assignment3_Arrays/: package-lock.json  q1_timesheet.js  q2_messageRedaction.js  q3_girlGuideCookie.js
Semester1/JavaScript/Assignment4_2DArrays/: ateam_New.txt  dungeon.js  q1.js  q2.js  the_story_file_updated.txt
Semester1/JavaScript/FinalProject_CountryInfo/: Untitled-1.js  Untitled-2.html  finalproject.html  package-lock.json  package.json  script.js  scriptBackup.js
Semester2/C/Assignment1_MultiplicationTable/: main.c
Semester2/C/Assignment2_LeapYearCalculator/: CMakeLists.txt
Semester2/C/Assignment3_StudentReportCard/: CMakeLists.txt  Makefile  README.md  test.sh
Semester2/C/Assignment5_Wordle/: CMakeLists.txt
Semester2/Java/Assignment1_CourseReportApp/: Course.java  Main.java  Student.java
Semester4/C++/Assignment3_BinarySearchTrees/: CMakeLists.txt
Semester4/C++/Assignment3_BinarySearchTrees/output/: tree.txt
Semester4/C++/Assignment3_BinarySearchTrees/src/: binary_search_tree.cpp  binary_search_tree.h  file_operations.cpp  file_operations.h  main.cpp
(+667 files in other folders)
